style.css
/* bars */

.amb_image {
  background-size: cover;
  height: 70px;
  width: 50px;
  background-position: center;
  background-repeat: no-repeat;
  flex-shrink: 0;
  border-radius: 4px;
}

.amb:last-child {
  padding-bottom: 0;
}

.amb:first-child {
  padding-top: 0;
}

.amb {
  display: flex;
  padding: 10px 0 10px 0;
}

.amb_info {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-left: 15px;
}

.amb_bar-container {
  width: 100%;
  height: 11px;
  border-radius: 11px;
  background-color: rgb(var(--color-foreground-grey-dark));
  overflow: hidden;
}

.amb_bar {
  height: 100%;
  background: linear-gradient(270deg, #02a9ff, #71cfff); /* same as AniList default. overridden if profile color is non-default. */
}

.amb_status {
  font-size: 1.1rem;
}

.amb .title {
  color: rgb(var(--color-blue));
}

.amb_status {
  display: flex;
  justify-content: space-between;
}

.amb_status time {
  color: rgb(var(--color-text-lighter));
}

/* hovercards */

.amc {
  position: fixed;
  top: 50px;
  left: 50px;
  background-color: rgb(var(--color-background));
  box-shadow: 0 0 29px rgba(49, 54, 68, .25);
  display: flex;
  width: 500px;
  height: 250px;
  overflow: hidden;
  font-size: 1.4rem;
  border-radius: 4px;
  z-index: 999;
}

.amc_stats {
  display: flex;
  align-items: center;
  position: absolute;
  bottom: 0;
  margin-bottom: 15px;
  color: rgb(var(--color-text-lighter));
  font-size: 1.1rem;
}

.amc_image {
  width: 100px;
  height: 150px;
  background-size: cover;
  background-position: center;
  border-radius: 4px;
}

.amc_underimage {
  text-align: center;
  flex-grow: 1;
  display: block;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 7px;
  position: relative;
}

.amc_rating {
  font-size: 1.2em;
  margin-top: 0.7em;
}

.amc_rankings {
  display: flex;
  justify-content: space-around;
  align-items: center;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.amc_cover {
  padding: 15px;
  display: flex;
  flex-direction: column;
}

.amc_info {
  padding: 15px;
  padding-left: 0;
  display: flex;
  flex-direction: column;
}

.amc_title {
  position: relative;
  font-size: 1.3em;
  font-weight: 600;
  color: #ffffff;

  margin-left: -130px;
  padding-left: 130px;
  margin-top: -15px;
  padding-top: 2em;
  padding-bottom: 7px;
  width: calc(100% + 145px);
}

.amc_title a:hover {
  color: inherit;
}

.amc_title .amc_banner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: top center;
  filter: brightness(0.5);
  z-index: -1;
}

.amc_description {
  overflow: hidden;
  height: 140px;
  margin: 7px 0 7px 0;
  color: rgb(var(--color-text));
  line-height: 1.5;
  position: relative;
}

.amc_description:after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 40px;
  background-image: linear-gradient(180deg, transparent, rgb(var(--color-background)));
}

